--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap-icons": "^1.10.4",
     "jquery": "^3.6.4",
     "ng-cdbangular": "^1.2.1",
+    "ngforms": "^1.0.46",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
